--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
+    "randomcolor": "^0.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
