--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "react-tooltip": "^4.2.21",
     "yup": "^0.32.11"
   },
   "devDependencies": {
